opam-version: "1.2"
name: "landmarks"
version: "1.2"
maintainer: "Marc Lasson <marc.lasson@lexifi.com>"
authors: "Marc Lasson <marc.lasson@lexifi.com>"
homepage: "http://lexifi.github.io/landmarks/"
bug-reports: "https://github.com/LexiFi/landmarks/issues"
license: "MIT"
dev-repo: "https://github.com/LexiFi/landmarks.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml-migrate-parsetree"
  "jbuilder" {build  & >= "1.0+beta18.1"}
]
available: ocaml-version >= "4.02.0"
