(executable
 (name test)
 (modes native)
 (libraries landmark))

(rule
 (ignore-stderr
  (with-stdout-to
   test.out
   (run ./test.exe))))

(rule
 (alias runtest)
 (package landmarks)
 (enabled_if
  (and (>= %{ocaml_version} "4.04") (= %{ocaml-config:word_size} "64")))
 (action
  (diff test.out.expected test.out)))
