(executable
 (name test)
 (modes js)
 (libraries landmark))

(rule
 (ignore-stderr
  (with-stdout-to
   test.out
   (run node ./test.bc.js))))

(rule
 (alias runtest)
 (enabled_if
    (and
   (>= %{ocaml_version} "4.04")
   (= %{ocaml-config:system} linux)))
 (action
  (diff test.out.expected test.out)))
