(rule
 (targets test.out)
 (deps (package landmarks) (:ppx %{workspace_root}/.ppx/landmarks.ppx/ppx.exe) (:redirect ../tools/redirect_stdin.exe))
 (action
  (with-stdout-to test.out
   (setenv TERM dumb
   (chdir %{workspace_root}/.ppx/landmarks.ppx
     (setenv CAML_LD_LIBRARY_PATH %{project_root}/src
        (run %{redirect} %{dep:test.ml} %{ocaml} -noprompt -no-version %{lib:landmarks:landmark.cma} -I %{project_root}/src/.landmark.objs/byte -ppx "%{ppx} --as-ppx")))))))

(alias
 (name runtest)
 (enabled_if (>= %{ocaml_version} "4.05"))
 (action (diff test.out.expected test.out)))
