(rule
 (targets test.out)
 (deps
  (package landmarks)
  (:ppx ../tools/standalone.exe)
  (:tt ../../toplevel/tt.exe))
 (action
  (with-stdout-to
   test.out
   (with-stdin-from
    test.ml
    (run %{tt} -color never -noprompt -no-version -ppx "%{ppx} --as-ppx")))))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} "4.05"))
 (action
  (diff test.out.expected test.out)))
