(rule
 (copy ../ppx/test.ml test.ml))

(executable
 (name test)
 (libraries landmark)
 (preprocess
  (pps ppx_landmarks --auto --remove)))

(rule
 (with-stdout-to
  test.out
  (ignore-stderr
   (setenv
    "OCAML_LANDMARKS"
    "on"
    (run ./test.exe)))))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} "4.03"))
 (action
  (diff test.out.expected test.out)))
