(rule
 (targets test.out)
 (deps (package landmarks))
 (action (with-stdout-to test.out
  (setenv TERM dumb
  (run ../tools/redirect_stdin.exe %{dep:test.ml} %{ocaml} -no-version -noprompt -ppx "%{dep:../../.ppx/landmarks.ppx/ppx.exe} --as-ppx")))))

(alias
 (name runtest)
 (enabled_if (>= %{ocaml_version} "4.05"))
 (action (diff test.out.expected test.out)))
