(rule
 (targets test.out)
 (deps (package landmarks) (:ppx %{workspace_root}/.ppx/landmarks.ppx/ppx.exe) (:redirect ../tools/redirect_stdin.exe))
 (action (with-stdout-to test.out
  (setenv TERM dumb
  (chdir %{workspace_root}/.ppx/landmarks.ppx (run %{redirect} %{dep:test.ml} %{ocaml} -no-version -noprompt -ppx "%{ppx} --as-ppx"))))))

(alias
 (name runtest)
 (enabled_if (>= %{ocaml_version} "4.05"))
 (action (diff test.out.expected test.out)))
