; -noinit prevents the toplevel from reading ~/.ocamlinit. Without it, users
; whose ~/.ocamlinit contains the standard opam-generated "#use \"topfind\""
; line would see the "Findlib has been successfully loaded..." banner printed
; to stdout, causing a diff against test.out.expected. The -noinit flag has
; been available since OCaml 4.02, so it is safe to use unconditionally here.
(rule
 (targets test.out)
 (deps
  (:ppx ../tools/standalone.exe)
  (:tt ../../toplevel/tt.exe))
 (action
  (with-stdout-to
   test.out
   (with-stdin-from
    test.ml
    (run %{tt} -color never -noprompt -no-version -noinit
         -ppx "%{ppx} --as-ppx")))))

(rule
 (alias runtest)
 (package landmarks-ppx)
 (enabled_if
  (>= %{ocaml_version} "4.08"))
 (action
  (diff test.out.expected test.out)))
