(rule
 (targets test.out)
 (deps
  test.ml
  (:ppx ../tools/standalone.exe))
 (action
  (with-stdout-to
   test.out
   (run %{ppx} -impl %{dep:test.ml} -pretty))))

(rule
 (alias runtest)
 (package landmarks-ppx)
 (enabled_if
  (>= %{ocaml_version} "4.08"))
 (action
  (diff test.out.expected test.out)))
