(executable
 (name test)
 (libraries landmark)
 (preprocess
  (pps ppx_landmarks)))

(rule
 (with-stdout-to
  test.out
  (setenv
   "OCAML_LANDMARKS"
   "format=json,output=\"callgraph.json\""
   (run ./test.exe))))

(rule
 (alias runtest)
 (package landmarks-ppx)
 (action
  (diff test.out.expected test.out)))
