(executable
 (name test)
 (libraries landmark)
 (preprocess (pps ppx_landmarks)))

(rule
 (with-stdout-to test.out
 (setenv "OCAML_LANDMARKS" "format=json,output=\"callgraph.json\""
   (run ./test.exe))))

(alias
 (name runtest)
 (enabled_if (>= %{ocaml_version} "4.03"))
 (action (diff test.out.expected test.out)))
