(executable
 (name test)
 (libraries landmark))

(rule
 (with-stderr-to
  test.err
  (with-stdout-to
   test.out
   (run ./test.exe))))

(rule
 (alias runtest)
 (enabled_if
   (and (>= %{ocaml_version} "4.04")  (< %{ocaml_version} "5")))
 (action
  (diff test.out.expected test.out)))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} "5"))
 (action
  (diff test_ocaml5.out.expected test.out)))
