(executable
 (name example)
 (libraries
   landmark
   landmarks-speedscope
 )
 (preprocess
  (pps ppx_landmarks)))

(executable
 (name test)
 (libraries
   landmark
   landmarks-speedscope
 )
)

(rule
 (with-stdout-to test.out
  (run ./test.exe)))

(rule
 (alias runtest)
 (package landmarks)
 (action
  (diff test.out.expected test.out)))

; Check out _build/default/tests/speedscope/profile.speedscope
; and upload it to https://www.speedscope.app/ to view the graph
(rule
 (alias runtest)
 (package landmarks-speedscope)
 (action
  (setenv "OCAML_LANDMARKS" "format=speedscope,output=profile.speedscope,time"
   (run ./example.exe))))
