(executable
 (name example)
 (libraries
   landmark
   landmarks-speedscope
 )
 (preprocess
  (pps ppx_landmarks)))

(executable
 (name test)
 (libraries
   landmark
   landmarks-speedscope
 )
)

(rule
 (with-stdout-to test.out
  (run ./test.exe)))

(rule
 (alias runtest)
 (package landmarks-speedscope)
 (action
  (diff test.out.expected test.out)))

; Check out _build/default/tests/speedscope/profile.speedscope.json
; and upload it to https://www.speedscope.app/ to view the graph.
;
; To update the copy of this file that we keep for documentation purposes, run:
; $ cp ../../_build/default/tests/speedscope/profile.speedscope.json .
;
(rule
 (alias runtest)
 (package landmarks-speedscope)
 (action
  (setenv "OCAML_LANDMARKS"
          "format=speedscope,output=profile.speedscope.json,time"
   (run ./example.exe))))
